<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="otp"
            type="com.fnspl.hiplaedu_teacher.activity.OtpVerificationActivity" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        tools:context="com.fnspl.hiplaedu_student.activity.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/iv_bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_topLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/m50"
                    android:layout_marginRight="@dimen/m50"
                    android:layout_marginTop="@dimen/m30"
                    android:scaleType="fitXY"
                    android:src="@drawable/toplogo" />

                <EditText
                    android:id="@+id/et_otp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:layout_below="@id/iv_topLogo"
                    android:layout_marginTop="@dimen/m20"
                    android:layout_marginLeft="@dimen/m20"
                    android:layout_marginRight="@dimen/m20"
                    android:layout_marginBottom="@dimen/m10"
                    android:hint="@string/enter_otp"
                    android:textColorHint="@color/textColorGray"
                    android:textColor="@color/textColorGray"
                    android:singleLine="true"
                    android:inputType="textCapCharacters"
                    android:paddingLeft="@dimen/m10"
                    android:textSize="@dimen/text_larg"
                    android:gravity="center_vertical"
                    android:background="@drawable/edt_background_corner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/m20"
                    android:layout_marginRight="@dimen/m20"
                    android:layout_marginBottom="@dimen/m10"
                    android:textColor="@color/textColorGray"
                    android:text="@string/otp_detail"
                    android:textSize="@dimen/text_normal"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginLeft="@dimen/m20"
                    android:layout_marginRight="@dimen/m20"
                    android:layout_marginBottom="@dimen/m10"
                    android:textColor="@color/textColorBlue"
                    android:text="@string/click_here_to_resend"
                    android:textSize="@dimen/text_medium"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/btn_otp_submit"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:background="@drawable/btn_selector"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_21ssp"
                    android:text="@string/ok"/>
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_95sdp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@drawable/color_hand" />
    </RelativeLayout>

</layout>
