<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="classStart"
            type="com.fnspl.hiplaedu_teacher.fragment.ClassStartFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context="com.fnspl.hiplaedu_student.fragment.ClassStartFragment">


        <ImageView
            android:id="@+id/iv_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_95sdp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@drawable/color_hand" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/tv_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m15"
                    android:paddingBottom="@dimen/m10">

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/leaving_class"
                        android:padding="@dimen/m40"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_extra_extra_larg"
                        android:gravity="center"
                        android:background="@drawable/comment_orange"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:layout_marginLeft="@dimen/m10"
                        android:layout_weight="50"
                        android:text="@string/class_name"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_larg" />

                    <TextView
                        android:id="@+id/tv_class_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/m5"
                        android:layout_weight="50"
                        android:text="Android"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_larg" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/textColorGray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:layout_marginLeft="@dimen/m10"
                        android:layout_weight="50"
                        android:text="@string/period_time"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_larg" />

                    <TextView
                        android:id="@+id/tv_period"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/m5"
                        android:layout_weight="50"
                        android:text="20:00 min"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_larg" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/textColorGray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:layout_marginLeft="@dimen/m10"
                        android:layout_weight="50"
                        android:text="@string/subject"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_larg" />

                    <TextView
                        android:id="@+id/tv_subject"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/m5"
                        android:layout_weight="50"
                        android:text="60"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_larg" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/textColorGray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/m5"
                    android:layout_margin="@dimen/m20"
                    android:text="@string/please_end_class"
                    android:gravity="center"
                    android:textColor="@color/textColorRed"
                    android:textSize="@dimen/text_larg" />


                <Button
                    android:id="@+id/btn_class_start"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:background="@drawable/btn_selector"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_21ssp"
                    android:text="@string/end"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</layout>