<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/m5"
    android:background="#dafaf7d6"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            android:layout_marginLeft="@dimen/m15"
            android:text="Class : ECE B 2018"
            android:textColor="@color/textColorGray"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_extra_larg" />

        <ImageView
            android:id="@+id/iv_navigation"
            android:layout_width="@dimen/m25"
            android:layout_height="@dimen/m25"
            android:scaleType="fitXY"
            android:src="@drawable/ic_map"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/m10"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/m5"
        android:layout_marginLeft="@dimen/m10"
        android:layout_marginRight="@dimen/m5"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_34sdp"
            android:layout_weight="40"
            android:background="@drawable/yellow_button">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/m5"
                android:layout_marginRight="@dimen/m5"
                android:weightSum="100">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:text="@string/subject"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_very_small" />

                <TextView
                    android:id="@+id/tv_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/m5"
                    android:text="Java"
                    android:textColor="#005D7E"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginLeft="@dimen/m5"
            android:layout_weight="60">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/start_time"
                    android:textColor="@color/textColorRed"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/m5"
                    android:layout_weight="50"
                    android:text="10:00 AM"
                    android:textColor="@color/textColorGray"
                    android:textSize="@dimen/_8ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/end_time"
                    android:textColor="@color/textColorRed"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="50"
                    android:text="11:00 AM"
                    android:textColor="@color/textColorGray"
                    android:textSize="@dimen/_8ssp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>