<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileInfo"
            type="com.fnspl.hiplaedu_teacher.fragment.ProfileInfoFragment" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_95sdp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@drawable/color_hand" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/m10"
            android:background="@color/background_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@color/background_color"
                tools:context="com.fnspl.hiplaedu_student.fragment.ProfileInfoFragment">

                <ImageView
                    android:id="@+id/iv_profile_pic"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/m10"
                    android:scaleType="fitXY"
                    android:src="@drawable/big_no_image" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/m10"
                    android:text="Avishek Mishra"
                    android:textColor="@color/textColorRed"
                    android:textSize="@dimen/text_extra_larg"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/m20"
                    android:layout_marginRight="@dimen/m20"
                    android:background="@drawable/background_corner"
                    android:orientation="vertical"
                    android:padding="@dimen/m7">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/m10">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/designation"
                                android:textColor="@color/textColorBlack"
                                android:textSize="@dimen/text_normal"
                                android:layout_weight="1"
                                android:gravity="end"/>

                            <TextView
                                android:id="@+id/tv_subject"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Science"
                                android:textColor="@color/textColorBlack"
                                android:textSize="@dimen/text_medium"
                                android:layout_weight="1"/>
                        </LinearLayout>

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_department"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/m10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/department"
                            android:textColor="@color/textColorBlack"
                            android:textSize="@dimen/text_normal"
                            android:layout_weight="1"
                            android:gravity="end"/>

                        <TextView
                            android:id="@+id/tv_department"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="IT"
                            android:textColor="@color/textColorBlack"
                            android:textSize="@dimen/text_medium"
                            android:layout_weight="1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/m10"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="right"
                            android:layout_marginLeft="@dimen/m10"
                            android:layout_weight="25"
                            android:text="@string/phone"
                            android:textColor="@color/textColorGreen"
                            android:textSize="@dimen/text_medium" />

                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/m5"
                            android:layout_weight="75"
                            android:text="+91 98012 31265"
                            android:textColor="@color/textColorBlue"
                            android:textSize="@dimen/text_medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/m10"
                        android:layout_marginBottom="@dimen/m10"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="right"
                            android:layout_marginLeft="@dimen/m10"
                            android:layout_weight="25"
                            android:text="@string/email"
                            android:textColor="@color/textColorGreen"
                            android:textSize="@dimen/text_medium" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/m5"
                            android:layout_weight="75"
                            android:text="abc@gmail.com"
                            android:textColor="@color/textColorBlue"
                            android:textSize="@dimen/text_medium" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/m10"
                        android:layout_marginTop="@dimen/m15"
                        android:gravity="center"
                        android:text="Synergy Building, 5th Floor, Thakdari Roead, Kolkata - 700028"
                        android:textColor="@color/textColorBlack"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</layout>